--- a/templates/overview.html
+++ b/templates/overview.html
@@ -27,14 +27,14 @@
 <div class="row" id="reasons">
 
 
-    <div class="heading">Why set goals with Goal Keeper?</div>
+    <div class="heading_padded">Why set goals with Goal Keeper?</div>
 
 
     <div class="col s4 reasons_for_goal_getter">
         <img src="{{ url_for('static', filename='images/focus.jpg')}}" class="vector_img"><br>
 
 
-        <div class="reasons_paragraph"> <b>Clearer Focus</b> <br>Properly thought out and stated, goals clearly set out your intentions and desires; the things you really want to achieve.</div>
+        <div class="reasons_paragraph"> <b>Clearer Focus</b> <br>Properly thought out and stated goals clearly set out your intentions and desires; the things you really want to achieve.</div>
     </div>
 
     <div class="col s4 reasons_for_goal_getter">
@@ -70,30 +70,30 @@
 
 
 
-    <div class="col s3 reasons_for_goal_getter blue">
+    <div class="col s3 reasons_for_goal_getter one">
         <div class="number"> 1 </div>
 
-        <div class="reasons_paragraph"> <b>Goals</b> <br>Simply select “Goals” in the nav bar to add your first goal today! </div>
+        <div class="reasons_paragraph"> <b>Goals</b> <br>Simply select "Add Goal" in the "Goals" secction to add your first goal today! </div>
 
 
     </div>
 
-    <div class="col s3 reasons_for_goal_getter red">
+    <div class="col s3 reasons_for_goal_getter two">
         <div class="number"> 2 </div>
 
-        <div class="reasons_paragraph"> <b>Add Category</b> <br>Goals are divided into different categories to help you manage them. If you want a category that isn’t already listed, simply add a new category from the “Add Category” section. This category will then be available for
+        <div class="reasons_paragraph"> <b>Add Category</b> <br>Goals are divided into different categories to help you manage them. If you want to add another category, simply select “Add Category” from the "Categories" section. This category will then be available for
             you to add goals to. </div>
 
     </div>
 
-    <div class="col s3 reasons_for_goal_getter green">
+    <div class="col s3 reasons_for_goal_getter three">
 
         <div class="number"> 3 </div>
-        <div class="reasons_paragraph"> <b>Add Steps</b> <br>You can also add steps to your goals that will help you to break down your goals into manageable and trackable stages. This can be done by selecting your individual goals and choosing to “Add Step”. </div>
+        <div class="reasons_paragraph"> <b>Add Steps</b> <br>You can also add steps to your goals that will help you to break down your goals into manageable and trackable stages. This can be done by viewing your individual goals in the "Goals" section and choosing to “Add Step”. </div>
 
     </div>
 
-    <div class="col s3 reasons_for_goal_getter yellow">
+    <div class="col s3 reasons_for_goal_getter four">
         <div class="number"> 4 </div>
 
         <div class="reasons_paragraph"> <b>Check your Progress </b> <br>Once you have started adding goals, you can check your progress anytime by selecting “Check your Progress” section. </div>
