--- a/templates/base.html
+++ b/templates/base.html
@@ -26,14 +26,19 @@
 
 
             <ul id="dropdown1" class="dropdown-content">
-                <li><a href="{{ url_for('get_goals') }}">Goals</a></li>
-                <li><a href="/categories">Add Category</a></li>
-                <li><a href="#goals">Check your progress</a></li>
+                <li><a href="{{ url_for('add_goal') }}">Add Goal</a></li>
+                <li><a href="{{ url_for('get_goals') }}">View Goals</a></li>
+
+
             </ul>
 
             <ul id="dropdown2" class="dropdown-content">
-                <li><a href="{{ url_for('get_goals') }}">Goals</a></li>
                 <li><a href="/categories">Add Category</a></li>
+            </ul>
+
+            <ul id="dropdown3" class="dropdown-content">
+                <li><a href="{{ url_for('progress_page') }}">Current progress</a></li>
+
             </ul>
 
 
@@ -47,23 +52,23 @@
                     <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 
 
-                    
+
                     <ul id="nav-mobile" class="right hide-on-med-and-down">
 
-                        <li><a class="nav-font" href="{{ url_for('progress_page') }}">Check your progress</a></li>
+                        <li><a class="dropdown-button" href="#!" data-activates="dropdown3">Check Your Progress<i class="material-icons right">arrow_drop_down</i></a></li>
                         <!--<li><a class="nav-font" href="/categories">Add Category</a></li>-->
 
 
+                        <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Goals<i class="material-icons right">arrow_drop_down</i></a></li>
+
+                        <li><a class="dropdown-button" href="#!" data-activates="dropdown2">Categories<i class="material-icons right">arrow_drop_down</i></a></li>
 
 
-                        <li><a class="dropdown-button" href="#!" data-activates="dropdown2">New Users<i class="material-icons right">arrow_drop_down</i></a></li>
 
-
-                        <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Existing Users<i class="material-icons right">arrow_drop_down</i></a></li>
                     </ul>
 
-            
-                    
+
+
                     <ul class="side-nav" id="mobile-demo">
 
                         <li><a class="nav-font" href="{{ url_for('get_goals') }}">Goals</a></li>
@@ -79,16 +84,18 @@
         {% block content %} {% endblock %}
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>-->
+    <!--<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+
+
     <script type="text/javascript">
         $(document).ready(function() {
             $('.collapsible').collapsible();
             $('select').material_select();
             $(".button-collapse").sideNav();
             $(".dropdown-button").dropdown();
+            $('#exampleModalCenter').modal('open');
         });
 
         $('.datepicker').pickadate({
@@ -105,6 +112,8 @@
 
         $('.modal').modal();
     </script>
+
+
 
 
 </body>
