--- a/templates/goals.html
+++ b/templates/goals.html
@@ -7,10 +7,9 @@
     </div>
 
 
- <a class="btn waves-effect waves-light orange newgoal" href="/add_goal"><i class="fas fa-plus-circle"></i>ADD NEW GOAL</a>
+    <!--<a class="btn waves-effect waves-light orange newgoal" href="/add_goal"><i class="fas fa-plus-circle"></i>ADD NEW GOAL</a>-->
 
 
-    <!--<a href="/add_goal"><button class="newgoal">  <i class="fas fa-plus-circle"></i></i> ADD NEW GOAL </button> </a>-->
     <div class="col s12 center">
 
 
@@ -47,8 +46,9 @@
                             </div>
 
                             <div class="col s5 no padding">
-                                <div class="close_modal"> <button data-dismiss="modal">Close [ x ]</button> </div>
+
                                 <p><b> Select Goal for further details. </b></p>
+
 
 
 
@@ -60,6 +60,7 @@
 
                             </div>
 
+                            <div class="modal-close"> <button data-dismiss="modal">Close [ x ]</button> </div>
 
                             <!--<button data-dismiss="modal">Close [ x ]</button>-->
 
