--- a/templates/progress.html
+++ b/templates/progress.html
@@ -1,44 +1,52 @@
 {% extends 'base.html' %} {% block content %}
 
 
+<div class="row">
+<div class="col s2"></div>
+ <div class="col s8">
 
-<div class="row white">
+  <div class="row white">
 
- <div class="row heading">Your Progress</div>
- <div class="col s2"></div>
- <div class="col s4">
+   <div class="row heading">Your Progress</div>
+   <div class="col s2"></div>
+   <div class="col s4">
 
-  <img src="{{ url_for('static', filename='images/in_progress.jpg')}}">
-  <div class="goal_name">Current goals</div>
+    <img src="{{ url_for('static', filename='images/in_progress.jpg')}}">
+    <div class="goal_name">Current goals</div>
 
 
-  {% for goal in unfinished %}
+    {% for goal in unfinished %}
 
-  <dl>
-   <dt><a href="{{url_for('goal_details', category=goal.category_name, goal_id=goal._id)}}" class="current_goal"><b>{{ goal.goal_name }}</b></a></dt>
-   <dd> {{ goal.status }}!</dd>
-   <dd> Mark a step complete<a href="{{url_for('goal_details', category=goal.category_name, goal_id=goal._id)}}" class="link"> here</a></dd>
-  </dl>
-  {%endfor%}
+    <dl>
+     <dt><a href="{{url_for('goal_details', category=goal.category_name, goal_id=goal._id)}}" class="current_goal"><b>{{ goal.goal_name }}</b></a></dt> {% if goal.status %}
+     <dd> {{ goal.status }}!</dd>
+     <dd> Mark a step complete<a href="{{url_for('goal_details', category=goal.category_name, goal_id=goal._id)}}" class="link"> here</a></dd>
+     {% endif %}
+    </dl>
+    {%endfor%}
+   </div>
+
+   <div class="col s4">
+    <img src="{{ url_for('static', filename='images/complete.jpg')}}">
+    <div class="goal_name">Completed goals</div>
+
+    {% for goal in finished %}
+
+    <ul>
+
+     <li class="finished_goal"><b>{{ goal.goal_name }}</b>
+     </li>
+
+    </ul> {%endfor%}
+
+   </div>
+   <div class="col s2"></div>
+  </div>
  </div>
-
- <div class="col s4">
-  <img src="{{ url_for('static', filename='images/complete.jpg')}}">
-  <div class="goal_name">Completed goals</div>
-
-  {% for goal in finished %}
-
-  <ul>
-   <li><a href="{{url_for('goal_details', category=goal.category_name, goal_id=goal._id)}}" class="current_goal"><b>{{ goal.goal_name }}</a></b>
-   </li>
-  </ul> {%endfor%}
-
- </div>
- <div class="col s2"></div>
-</div>
 </div>
 
 
 
+</div>
 
 {% endblock %}
