toggle on navbar color changed

--- a/templates/overview.html
+++ b/templates/overview.html
@@ -12,10 +12,11 @@
 <!--</a>-->
 
 
-<div class="row arrow tagline">
-    <div class="col s2"></div>
-    <div class="col s8"><b>Goal Keeper</b> helps make the process of setting and tracking your goals simple. Create plans, track progress, get results!
-        <p>Why use Goal Keeper? <br>
+<div class="row tagline">
+
+    <div class="col l8">
+        <p><b>Goal Keeper</b> helps make the process of setting and tracking your goals simple. Create plans, track progress, get results!
+            <br>Why use Goal Keeper? <br>
             <a href='#reasons'><i class="fas fa-angle-double-down font_awesome"></i></a></p>
 
     </div>
@@ -27,35 +28,35 @@
 <div class="row" id="reasons">
 
 
-    <div class="heading_padded">Why set goals with Goal Keeper?</div>
+<!--    <div class="heading_padded">Why set goals with Goal Keeper?</div>-->
 
 
-    <div class="col s4 reasons_for_goal_getter">
-        <img src="{{ url_for('static', filename='images/focus.jpg')}}" class="vector_img"><br>
+<!--    <div class="col s4 reasons_for_goal_getter">-->
+<!--        <img src="{{ url_for('static', filename='images/focus.jpg')}}" class="vector_img"><br>-->
 
 
-        <div class="reasons_paragraph"> <b>Clearer Focus</b> <br>Properly thought out and stated goals clearly set out your intentions and desires; the things you really want to achieve.</div>
-    </div>
+<!--        <div class="reasons_paragraph"> <b>Clearer Focus</b> <br>Properly thought out and stated goals clearly set out your intentions and desires; the things you really want to achieve.</div>-->
+<!--    </div>-->
 
-    <div class="col s4 reasons_for_goal_getter">
-        <img src="{{ url_for('static', filename='images/peace_of_mind.jpg')}}" class="vector_img"><br>
+<!--    <div class="col s4 reasons_for_goal_getter">-->
+<!--        <img src="{{ url_for('static', filename='images/peace_of_mind.jpg')}}" class="vector_img"><br>-->
 
-        <div class="reasons_paragraph"> <b>Peace of mind</b> <br>Too often you can have many things on your mind. Writing down your goals can help you take all of those ideas, apply perspective and priority, then galvanize you into commitment and action.</div>
-    </div>
+<!--        <div class="reasons_paragraph"> <b>Peace of mind</b> <br>Too often you can have many things on your mind. Writing down your goals can help you take all of those ideas, apply perspective and priority, then galvanize you into commitment and action.</div>-->
+<!--    </div>-->
 
-    <div class="col s4 reasons_for_goal_getter">
-        <img src="{{ url_for('static', filename='images/measure_progress.jpg')}}" class="vector_img"><br>
+<!--    <div class="col s4 reasons_for_goal_getter">-->
+<!--        <img src="{{ url_for('static', filename='images/measure_progress.jpg')}}" class="vector_img"><br>-->
 
-        <div class="reasons_paragraph"> <b>Measure your progress</b> <br>Setting goals allows you to measure how well effectively you are moving towards achieving them.</div>
-    </div>
-    <div class="row center">
-        <div class="row"></div>
+<!--        <div class="reasons_paragraph"> <b>Measure your progress</b> <br>Setting goals allows you to measure how well effectively you are moving towards achieving them.</div>-->
+<!--    </div>-->
+<!--    <div class="row center">-->
+<!--        <div class="row"></div>-->
 
-        <p>Get Started Today<br>
-            <a href='#get_started'><i class="fas fa-angle-double-down font_awesome"></i></a></p>
-    </div>
+<!--        <p>Get Started Today<br>-->
+<!--            <a href='#get_started'><i class="fas fa-angle-double-down font_awesome"></i></a></p>-->
+<!--    </div>-->
 
-</div>
+<!--</div>-->
 
 
 
@@ -81,8 +82,8 @@
     <div class="col s3 reasons_for_goal_getter two">
         <div class="number"> 2 </div>
 
-        <div class="reasons_paragraph"> <b>Add Category</b> <br>Goals are divided into different categories to help you manage them. If you want to add another category, simply select “Add Category” from the "Categories" section. This category will then be available for
-            you to add goals to. </div>
+        <div class="reasons_paragraph"> <b>Add Category</b> <br>Goals are divided into different categories to help you manage them. If you want to add another category, simply select “Add Category” from the "Categories" section. This category will then be available for you to add goals
+            to. </div>
 
     </div>
 
