--- a/static/css/style.css
+++ b/static/css/style.css
@@ -80,20 +80,40 @@ body {
 
 
 
-.arrow {
+.tagline {
 
     position: absolute;
     top: 5%;
     margin: 4%;
     text-align: center;
     animation: jump 5s infinite;
-}
-
-
-.tagline {
     font-size: 2em;
-
 }
+
+
+/*@media (max-width:767px) {*/
+/*    .tagline {*/
+        
+    
+/*    top: 15%;*/
+/*    margin: 4%;*/
+/*    font-size: 1em;*/
+        
+/*    }*/
+/*}*/
+
+@media (min-width: 768px) and (max-width: 991px) {
+    .tagline {
+        
+    }
+}
+
+@media (min-width: 992px) and (max-width: 1800px) {
+    .tagline {
+        
+    }
+}
+
 
 
 
@@ -145,9 +165,13 @@ nav ul a {
     font-family: 'Fredoka One', cursive;
     margin-left: 10px;
     margin-top: 10px;
-    /*color: #ff4000;*/
     font-size: 25px;
     color: black;
+}
+
+nav .button-collapse {
+    color: #ff4000;
+
 }
 
 
@@ -703,14 +727,6 @@ textarea.materialize-textarea:focus:not([readonly]) {
     margin: 0 auto;
 
 }
-
-/*.close-modal {*/
-/*    position: absolute;*/
-    /*bottom: 2%;*/
-    /*right: 2%;*/
-/*    padding: 5px;*/
-/*}*/
-
 
 
 .modal .modal-content {
