--- a/templates/overview.html
+++ b/templates/overview.html
@@ -14,13 +14,24 @@
 
 <div class="row tagline">
 
-    <div class="col l8">
-        <p><b>Goal Keeper</b> helps make the process of setting and tracking your goals simple. Create plans, track progress, get results!
-            <br>Why use Goal Keeper? <br>
+    <div class="hide-on-med-and-up">
+
+        <p><b>Why use Goal Keeper?</b><br>
             <a href='#reasons'><i class="fas fa-angle-double-down font_awesome"></i></a></p>
 
     </div>
-    <div class="col s2"></div>
+
+    <div class="hide-on-small-only">
+        <div class="col m2"></div>
+        <div class="col m8">
+            <p><b>Goal Keeper</b> helps make the process of setting and tracking your goals simple. Create plans, track progress, get results!
+                <br><b>Why use Goal Keeper?</b> <br>
+                <a href='#reasons'><i class="fas fa-angle-double-down font_awesome"></i></a></p>
+        </div>
+
+    </div>
+
+    <!--<div class="col s2"></div>-->
 </div>
 
 
@@ -28,35 +39,35 @@
 <div class="row" id="reasons">
 
 
-<!--    <div class="heading_padded">Why set goals with Goal Keeper?</div>-->
+    <div class="heading_padded">Why set goals with Goal Keeper?</div>
 
 
-<!--    <div class="col s4 reasons_for_goal_getter">-->
-<!--        <img src="{{ url_for('static', filename='images/focus.jpg')}}" class="vector_img"><br>-->
+    <div class="col s12 m4 reasons_for_goal_getter">
+        <img src="{{ url_for('static', filename='images/focus.jpg')}}" class="vector_img"><br>
 
 
-<!--        <div class="reasons_paragraph"> <b>Clearer Focus</b> <br>Properly thought out and stated goals clearly set out your intentions and desires; the things you really want to achieve.</div>-->
-<!--    </div>-->
+        <div class="reasons_paragraph"> <b>Clearer Focus</b> <br>Properly thought out and stated goals clearly set out your intentions and desires; the things you really want to achieve.</div>
+    </div>
 
-<!--    <div class="col s4 reasons_for_goal_getter">-->
-<!--        <img src="{{ url_for('static', filename='images/peace_of_mind.jpg')}}" class="vector_img"><br>-->
+    <div class="col s12 m4 reasons_for_goal_getter">
+        <img src="{{ url_for('static', filename='images/peace_of_mind.jpg')}}" class="vector_img"><br>
 
-<!--        <div class="reasons_paragraph"> <b>Peace of mind</b> <br>Too often you can have many things on your mind. Writing down your goals can help you take all of those ideas, apply perspective and priority, then galvanize you into commitment and action.</div>-->
-<!--    </div>-->
+        <div class="reasons_paragraph"> <b>Peace of mind</b> <br>Too often you can have many things on your mind. Writing down your goals can help you take all of those ideas, apply perspective and priority, then galvanize you into commitment and action.</div>
+    </div>
 
-<!--    <div class="col s4 reasons_for_goal_getter">-->
-<!--        <img src="{{ url_for('static', filename='images/measure_progress.jpg')}}" class="vector_img"><br>-->
+    <div class="col s12 m4 reasons_for_goal_getter">
+        <img src="{{ url_for('static', filename='images/measure_progress.jpg')}}" class="vector_img"><br>
 
-<!--        <div class="reasons_paragraph"> <b>Measure your progress</b> <br>Setting goals allows you to measure how well effectively you are moving towards achieving them.</div>-->
-<!--    </div>-->
-<!--    <div class="row center">-->
-<!--        <div class="row"></div>-->
+        <div class="reasons_paragraph"> <b>Measure your progress</b> <br>Setting goals allows you to measure how well effectively you are moving towards achieving them.</div>
+    </div>
+    <div class="row center">
+        <div class="row"></div>
 
-<!--        <p>Get Started Today<br>-->
-<!--            <a href='#get_started'><i class="fas fa-angle-double-down font_awesome"></i></a></p>-->
-<!--    </div>-->
+        <p>Get Started Today<br>
+            <a href='#get_started'><i class="fas fa-angle-double-down font_awesome"></i></a></p>
+    </div>
 
-<!--</div>-->
+</div>
 
 
 
@@ -71,7 +82,7 @@
 
 
 
-    <div class="col s3 reasons_for_goal_getter one">
+    <div class="col s12 m6 l3 getting_started one">
         <div class="number"> 1 </div>
 
         <div class="reasons_paragraph"> <b>Goals</b> <br>Simply select "Add Goal" in the "Goals" secction to add your first goal today! </div>
@@ -79,7 +90,7 @@
 
     </div>
 
-    <div class="col s3 reasons_for_goal_getter two">
+    <div class="col s12 m6 l3 getting_started two">
         <div class="number"> 2 </div>
 
         <div class="reasons_paragraph"> <b>Add Category</b> <br>Goals are divided into different categories to help you manage them. If you want to add another category, simply select “Add Category” from the "Categories" section. This category will then be available for you to add goals
@@ -87,14 +98,14 @@
 
     </div>
 
-    <div class="col s3 reasons_for_goal_getter three">
+    <div class="col s12 m6 l3 getting_started three">
 
         <div class="number"> 3 </div>
         <div class="reasons_paragraph"> <b>Add Steps</b> <br>You can also add steps to your goals that will help you to break down your goals into manageable and trackable stages. This can be done by viewing your individual goals in the "Goals" section and choosing to “Add Step”. </div>
 
     </div>
 
-    <div class="col s3 reasons_for_goal_getter four">
+    <div class="col s12 m6 l3 getting_started four">
         <div class="number"> 4 </div>
 
         <div class="reasons_paragraph"> <b>Check your Progress </b> <br>Once you have started adding goals, you can check your progress anytime by selecting “Check your Progress” section. </div>
