progress page responsive on all devices

--- a/templates/progress.html
+++ b/templates/progress.html
@@ -12,7 +12,7 @@
    <div class="heading">Your Progress</div>
 
 
-   <div class="col s6">
+   <div class="col s12 m6">
 
     <img src="{{ url_for('static', filename='images/in_progress.jpg')}}">
     <div class="goal_name">Current goals</div>
@@ -42,7 +42,7 @@
     {%endfor%}
    </div>
 
-   <div class="col s6">
+   <div class="s12 m6">
 
     <img src="{{ url_for('static', filename='images/complete.jpg')}}">
     <div class="goal_name">Completed goals</div>
