--- a/static/css/style.css
+++ b/static/css/style.css
@@ -354,12 +354,14 @@ nav .button-collapse {
 }
 
 .category-label {
-    width: 240px;
+    width: 300px;
     height: 240px;
     position: relative;
     display: inline-block;
     font-size: 25px;
     color: white;
+    padding: 5%;
+ 
 }
 
 
@@ -374,6 +376,7 @@ nav .button-collapse {
     width: 100%;
     height: 100%;
     border-radius: 8px;
+    position: contain;
 
 
 }
@@ -765,9 +768,10 @@ h2 {
 }
 
 
-.center {
+.categories_layout{
     text-align: center;
     margin-left: 0px;
+  
 }
 
 
