modal responsive on all devices

--- a/templates/goals.html
+++ b/templates/goals.html
@@ -9,8 +9,8 @@
 
     <!--<a class="btn waves-effect waves-light orange newgoal" href="/add_goal"><i class="fas fa-plus-circle"></i>ADD NEW GOAL</a>-->
 
-<div class="col s1"></div>
-    <div class="col s10 center">
+    <div class="col s1"></div>
+    <div class="col s10 categories_layout">
 
 
 
@@ -23,15 +23,7 @@
             <div class="category-label"><img class="small-img" src="{{category.image}}">
                 <span class="category-title">{{ category.category_name }}</span>
             </div>
-        </a> </button>
-        
-       {% endfor %} 
-         <div class="row">
-            
-        </div>
-        
-        
-        
+        </a> </button> {% endfor %} 
         
         {% if category != 'Goals' %}
         <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
@@ -40,40 +32,23 @@
 
                     <div class="modal-body">
 
-                        <!--<div class="row">-->
-                        <!--   Goals in this category -->
-                        <!--    <div class="close_modal"> <button data-dismiss="modal">Close [ x ]</button>-->
-                        <!--    </div>-->
-                        <!--</div>-->
-
-
-
-
                         <div class="row no_padding">
-                            <!--<div class="col s6 modal_img">-->
-                            <div class="col s6 no padding">
+                           
+                           
+                            <div class="col l6 no padding">
                                 <img class="modal_img_2" src="{{url_for('static', filename='images/modal.jpg')}}">
                             </div>
-
-                            <div class="col s5 no padding">
-
+                            
+                            <div class="col s12 l6 no padding">
                                 <p><b> Select Goal for further details. </b></p>
-
-
-
 
                                 {% for goal in goals %}
 
-
-
                                 <a href="{{url_for('goal_details', category=goal.category_name, goal_id=goal._id)}}" class="current_goal">{{ goal.goal_name }}</a><br> {% endfor %}
-
                             </div>
-
-                            <div class="modal-close"> <button data-dismiss="modal">Close [ x ]</button> </div>
-
-                            <!--<button data-dismiss="modal">Close [ x ]</button>-->
-
+                           
+                            <div class="modal-close"> <button data-dismiss="modal">Close [ x ]</button> </div> <p></p>
+                        
                         </div>
                     </div>
                 </div>
