--- a/static/css/style.css
+++ b/static/css/style.css
@@ -361,7 +361,7 @@ nav .button-collapse {
     font-size: 25px;
     color: white;
     padding: 5%;
- 
+
 }
 
 
@@ -408,8 +408,8 @@ nav .button-collapse {
 
 @media (max-width:767px) {
     .goal_form {
-       margin: 5%;
-     
+        margin: 5%;
+
 
     }
 }
@@ -426,7 +426,7 @@ nav .button-collapse {
 @media (max-width:767px) {
     .add_goal_form {
         width: 100%;
-     
+
 
     }
 }
@@ -445,8 +445,6 @@ nav .button-collapse {
 @media (max-width:767px) {
     .new_goal_button_on_form {
         right: 10%
-     
-
     }
 }
 
@@ -650,7 +648,7 @@ nav .button-collapse {
     position: absolute;
     top: 15%;
     left: 5%;
-    
+
     background-color: white;
 
 
@@ -658,8 +656,8 @@ nav .button-collapse {
 
 @media (max-width:767px) {
     .goal_detail {
-      
-right: 5%;
+
+        right: 5%;
     }
 }
 
@@ -768,10 +766,10 @@ h2 {
 }
 
 
-.categories_layout{
+.categories_layout {
     text-align: center;
     margin-left: 0px;
-  
+
 }
 
 
@@ -837,8 +835,6 @@ textarea.materialize-textarea:focus:not([readonly]) {
     height: 100vw;
     width: 100vw;
     margin-bottom: 0px;
-
-    z-index: 1;
     background-repeat: no-repeat;
 
 }
@@ -848,6 +844,9 @@ textarea.materialize-textarea:focus:not([readonly]) {
 
     width: 100%;
     height: 100%;
+    padding-top: 5px!important;
+    padding-left: 5px!important;
+    padding-right: 5px!important;
     overerflow: auto;
     margin: 0 auto;
 
